# Adaface

./: .gitignore  AdaFaceFeature.py  Dockerfile  FaceDatabase.py  README.md  What`s Changed.md  environment.yml  flask_http_server.py  pyproject.toml  register.py  test.py  utils.py  verify2.py  verify3.py  verify4.py
face_alignment/: align.py  mtcnn.py
face_hnfnu/: AdaFaceFeature.py  Config.py  FaceDatabase.py  __init__.py  __main__.py  http_server.py  log.py
face_hnfnu/face_alignment/: align.py  mtcnn.py
src/: Config.py  FaceDatabase.py  __main__.py  http_server.py
