[project]
name = "face-hnfnu"
version = "0.1"
description = "simple face detector"
authors = []
dependencies = [
    "imutils >= 0.5.4",
    "opencv-python >= 4.5.5.62",
    "numpy >= 1.22.2",
    "uvicorn >= 0.17.6",
    "loguru >= 0.6.0",
    "PyYAML >= 6.0.1",
    "faiss-cpu >= 1.8.0",
    "packaging",
    "torchvision >= 0.18.0",
    "pytorch_lightning >= 2.2.5",
    "fastapi >= 0.111.0",
    "websockets",
    "yuface >= 2023.5.1"
]
requires-python = " >= 3.11, <3.12"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517 >= 1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
